収集がない日（例外処理）の実装

--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
                 '2026-01-01': ['NONE'],
                 '2026-01-02': ['NONE'],
                 '2026-01-03': ['NONE'],
+                // 今年度（2026年）の例外追加分
+                '2026-02-23': ['NONE'],
+                '2026-03-20': ['NONE'],
+                '2026-03-31': ['NONE'],
             };
 
             const getNthDay = (date) => Math.floor((date.getDate() - 1) / 7) + 1;
